WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27394
V8: Selenium test failures
https://bugs.webkit.org/show_bug.cgi?id=27394
Summary
V8: Selenium test failures
Mads Ager
Reported
2009-07-17 15:53:22 PDT
After
http://trac.webkit.org/changeset/45797
there are new selenium test failures using WebCore/V8. If javascript code holds a reference to the global object of a frame we need to eagerly initialize the JavaScript context when a new document is loaded in that frame to allow access to properties of that global object. This kind of pattern is used in selenium tests to detect page loads. Patch coming up.
Attachments
Fix global access after navigation
(1.45 KB, patch)
2009-07-17 15:55 PDT
,
Mads Ager
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mads Ager
Comment 1
2009-07-17 15:55:47 PDT
Created
attachment 32986
[details]
Fix global access after navigation
Dimitri Glazkov (Google)
Comment 2
2009-07-17 16:01:42 PDT
Comment on
attachment 32986
[details]
Fix global access after navigation ok
Sam Weinig
Comment 3
2009-07-17 16:39:54 PDT
Is there at test that can be added to the test suite for this bug fix?
Mads Ager
Comment 4
2009-07-17 16:50:41 PDT
Yes, you are right. I should add a layout test with a reduced test case. Let me put something together and upload that as a separate patch.
Eric Roman
Comment 5
2009-07-17 17:12:58 PDT
Landed
r46073
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug