2009-07-17  Mads Ager  <ager@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=27394
        Fix access to global object wrappers after navigation of their
        frame in the V8 bindings.  This fixes selenium test failures.

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::updateDocument):


Canonical link: https://commits.webkit.org/37694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46073 268f45cc-cd09-0410-ab3c-d52691b4dbfc